# blueflare

./: .bowerrc  .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  bower.json  docker-compose.yml  docker-compose.yml.example  package.json  pyproject.toml  setup.py  webapp.py
.github/workflows/: build-docker-image.yml
blueflare/: master_client.py  server.py  server_query_client.py
blueflare/privilege-icons/: README.txt
frontend/: blueflare.css  blueflare.js  index.html  redflare.css  redflare.js
redflare/: master_client.py  privilege_icons.py  server.py  server_client.py  server_query_client.py
