[tool.poetry]
name = "blueflare"
version = "0.0.1"
description = ""
authors = ["TheAssassin <theassassin@assassinate-you.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6.1"
geoip2 = "*"
chardet = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
